removed duplicate class elements and script type for javascript

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -198,9 +198,8 @@ a:hover {
 }
 
 .image-button:hover {
-    color: #fff;
-    background-color: #637867;
-    
+    color: #fff !important;
+    background-color: #637867 !important;
 }
 
 /* -------------------------------- bag */
