--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -8,7 +8,7 @@
     <div class="row">
         <div class="col text-center">
             {% for c in current_categories %}
-            <h2 class="sub-heading" href="{% url 'products' %}?category={{ c.name }}">{{ c.friendly_name }}</h2>
+            <p class="sub-heading" href="{% url 'products' %}?category={{ c.name }}">{{ c.friendly_name }}</p>
             {% endfor %}
 
         </div>
@@ -113,13 +113,13 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
     $('.btt-link').click(function (e) {
         window.scrollTo(0, 0)
     })
 </script>
 
-<script type="text/javascript">
+<script>
     $('#sort-selector').change(function () {
         var selector = $(this);
         var currentUrl = new URL(window.location);
