--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -8,9 +8,7 @@
 <div class="container mb-2 header-container">
    <div class="row">
       <div class="col">
-         <hr>
          <h2 class="sub-heading mb-4 text-center">Thank You</h2>
-         <hr>
          <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
       </div>
    </div>
@@ -172,11 +170,8 @@
          <span class="text-uppercase">Back to Profile</span>
          </a>
          {% else %}
-         <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
-         <span class="icon mr-2">
-         <i class="fas fa-gifts"></i>
-         </span>
-         <span class="text-uppercase">Now check out the latest deals!</span>
+         <a href="{% url 'products' %}" class="btn btn-block rounded-0 my-2">
+         <span class="text-uppercase">Keep shopping?</span>
          </a>
          {% endif %}
       </div>
