--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -6,7 +6,8 @@
    <div class="row">
       <div class="col-md-8 mx-auto">
          <h2 class="sub-heading mb-4 text-center">Contact</h2>
-         <p class="text-center">For stockist, collaboration or any other enquiries, please get in touch using the form below </p>
+         <p class="text-center">We'd love to hear from you! <br>
+            Write to us with any questions, comments or ideas, any time.</p>
       </div>
    </div>
 </div>
