--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -52,6 +52,9 @@
             </small>
             {% endif %}
             <p class="mt-3 product-description">{{ product.description }}</p>
+            <p class="mt-3 product-info">MEASUREMENTS | {{ product.measurements }}</p>
+            <p class="mt-3 product-info">MATERIAL | {{ product.material }}</p>
+            <p class="mt-3 product-info">ORIGIN | {{ product.origin }}</p>
             <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                {% csrf_token %}
                <div class="form-row">
