--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -26,21 +26,21 @@
       <div class="col">
          <div class="card-deck">
             <div class="card rounded-0 index-image-baskets">
-               <img class="card-img" src="{{ MEDIA_URL }}fine-weave-baskets.png" alt="Card image">
+               <img class="card-img" src="{{ MEDIA_URL }}fine-weave-baskets.png" alt="image of fine weave baskets">
                <div class="card-img-overlay my-5 text-center">
                   <a href="{% url 'products' %}?category=baskets" 
                      class="image-button btn btn-lg rounded-0 text-uppercase py-3">Baskets</a>
                </div>
             </div>
             <div class="card rounded-0 index-image-pillows">
-               <img class="card-img" src="{{ MEDIA_URL }}pillows.jpg" alt="Card image">
+               <img class="card-img" src="{{ MEDIA_URL }}pillows.jpg" alt="image of mud cloth pillows">
                <div class="card-img-overlay my-5 text-center">
                   <a href="{% url 'products' %}?category=pillows"
                      class="image-button btn btn-lg rounded-0 text-uppercase py-3">Pillows</a>
                </div>
             </div>
             <div class="card rounded-0 index-image-blankets">
-               <img class="card-img" src="{{ MEDIA_URL }}alpaca-blanket.jpg" alt="Card image">
+               <img class="card-img" src="{{ MEDIA_URL }}alpaca-blanket.jpg" alt="image of alpaca wool blankets">
                <div class="card-img-overlay my-5 text-center">
                   <a href="{% url 'products' %}?category=blankets"
                      class="image-button btn btn-lg rounded-0 text-uppercase py-3">Blankets</a>
