--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -1,22 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
-{% block page_header %}
-<div class="container header-container">
-   <div class="row">
-      <div class="col"></div>
-   </div>
-</div>
-{% endblock %}
 {% block content %}
 <div class="overlay"></div>
-<div class="container mb-2">
+<div class="container mb-2 header-container">
    <div class="row">
-      <div class=" col-md-8 col-md-10 mx-auto">
+      <div class="col-md-8 mx-auto">
          <h2 class="sub-heading mb-4 text-center">Edit Blog Post</h2>
       </div>
    </div>
-   <div class="row">
-      <div class="col-12 col-md-6">
+</div>
+<div class="container">
+   <div class="row padding-row">
+      <div class="col-md-8 mt-3 mx-auto">
          <form method="POST" action="{% url 'edit_post' post.pk  %}" class="form mb-2" enctype="multipart/form-data">
             {% csrf_token %}
             {% for field in form %}
@@ -33,5 +28,6 @@
          </form>
       </div>
    </div>
+</div>
 </div>
 {% endblock %}
