--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -6,8 +6,8 @@
    <div class="row">
       <div class="col-md-8 mx-auto">
          <h2 class="sub-heading mb-4 text-center">Contact</h2>
-         <p class="text-center">We'd love to hear from you! <br>
-            Write to us with any questions, comments or ideas, any time.</p>
+         <h5 class="text-center">We'd love to hear from you!</h5>
+            <p class="text-center">Don't hesitate to contact us. We gladly help you with questions regarding your order but also with guidance or purchases.</p>
       </div>
    </div>
 </div>
