--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -59,7 +59,7 @@
                {% csrf_token %}
                <div class="form-row">
                   <div class="col-12">
-                     <p class="mt-3">Quantity:</p>
+                     <h5 class="mt-3">Quantity:</h5>
                      <div class="form-group w-50 border">
                         <div class="input-group input-group-{{ product.id }}">
                            <div class="input-group-prepend">
