--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,7 +1,7 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
-<div class="index-hero container-fluid h-100">
+<div class="index-hero container-fluid">
    <div class="row h-100">
       <div class="col-7 col-md-6 my-auto">
          <h1 class="display-3 heading text-center">
