--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -90,7 +90,7 @@
          </div>
          {% else %}
          <div class="text-center">
-            <h4 class="mb-5 mt-3"><strong>You don't have anything in your bag yet!</strong></h4>
+            <h5 class="mb-5 mt-3">You don't have anything in your bag yet!</h5>
             <a href="{% url 'products' %}" class="btn rounded-0">
             <span class="icon">
             <i class="fas fa-chevron-left"></i>
