--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -16,7 +16,7 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <a class="btn rounded-0" href="{% url 'home' %}">Cancel</a>
+  <a class="btn rounded-0 text-white" href="{% url 'home' %}">Cancel</a>
   <button type="submit btn">{% trans 'Log out' %}</button>
 </form>
 </div>
