--- a/static/css/base.css
+++ b/static/css/base.css
@@ -457,11 +457,11 @@ a.btn.btn-blog:hover {
 }
 
 /* -------------------------------- footer */
+/* code credit for getting footer to stick to the bottom of the page: https://css-tricks.com/couple-takes-sticky-footer/*/
 
 .page-footer {
     background-color: white;
     flex-shrink: 0;
-  
 }
 
 .social-links {
