--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 <div class="index-hero container-fluid">
    <div class="row h-100">
       <div class="col-7 col-md-6 my-auto">
-         <h1 class="display-3 heading text-center">
+         <h1 class="text-center">
             Peru Collection
          </h1>
          <h2 class="text-center mt-2">- Alpaca Wool Blankets -</h2>
