updated testing user stories in testing.md

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -8,8 +8,8 @@
 <div class="container mb-2 header-container">
    <div class="row">
       <div class="col">
-         <h2 class="sub-heading mb-4 text-center">Thank You</h2>
-         <p class="text-black">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
+         <h2 class="sub-heading mb-4 text-center">Thank You!</h2>
+         <p class="text-black text-center">Your order information is below. A confirmation email will be sent to <strong>{{ order.email }}</strong>.</p>
       </div>
    </div>
    <div class="row">
