--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -9,7 +9,7 @@
          </h1>
          <h2 class="text-center mt-2">- Alpaca Wool Blankets -</h2>
          <div class="my-5 text-center">
-            <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
+            <a href="{% url 'products' %}?category=blankets" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop Now</a>
          </div>
       </div>
    </div>
