--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -63,7 +63,8 @@
                   </a>
                   {% endif %}
                   <div class="card-body pb-0">
-                     <p class="mb-0 product-name">{{ product.name }}</p>
+                     <a href="{% url 'product_detail' product.id %}">
+                     <p class="mb-0 product-name">{{ product.name }}</p></a>
                   </div>
                   <div class="card-footer bg-white pt-0 border-0 text-left">
                      <div class="row">
