changed color on loading-overlay

--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,10 +1,10 @@
-<a href="{% url 'products' %}" class="btn btn-sm rounded-0">
+<a href="{% url 'products' %}" class="btn rounded-0">
     <span class="icon">
         <i class="fas fa-chevron-left"></i>
     </span>
     <span class="text-uppercase">Keep Shopping</span>
 </a>
-<a href="{% url 'checkout' %}" class="btn btn-sm rounded-0">
+<a href="{% url 'checkout' %}" class="btn rounded-0">
     <span class="text-uppercase">Checkout</span>
     <span class="icon">
         <i class="fas fa-lock"></i>
