--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -160,7 +160,7 @@
          </div>
       </div>
    </div>
-   <div class="row">
+   <div class="row padding-row">
       <div class="col-12 col-lg-7 text-right">
          {% if from_profile %}
          <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
