corrected typos in testing.md

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -107,7 +107,7 @@
 {{ block.super }}
 <script type="text/javascript">
    $('.btt-link').click(function(e) {
-       window.scrollTo(0,0)
+       window.scrollTo(0,0);
    })
 </script>
 {% include 'products/includes/quantity_input_script.html' %}
