--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,21 +25,21 @@
    <div class="row">
       <div class="col">
          <div class="card-deck">
-            <div class="card rounded-0 index-image-baskets">
+            <div class="card rounded-0 index-image">
                <img class="card-img" src="{{ MEDIA_URL }}fine-weave-baskets.png" alt="image of fine weave baskets">
                <div class="card-img-overlay my-5 text-center">
                   <a href="{% url 'products' %}?category=baskets" 
                      class="image-button btn btn-lg rounded-0 text-uppercase py-3">Baskets</a>
                </div>
             </div>
-            <div class="card rounded-0 index-image-pillows">
+            <div class="card rounded-0 index-image">
                <img class="card-img" src="{{ MEDIA_URL }}pillows.jpg" alt="image of mud cloth pillows">
                <div class="card-img-overlay my-5 text-center">
                   <a href="{% url 'products' %}?category=pillows"
                      class="image-button btn btn-lg rounded-0 text-uppercase py-3">Pillows</a>
                </div>
             </div>
-            <div class="card rounded-0 index-image-blankets">
+            <div class="card rounded-0 index-image">
                <img class="card-img" src="{{ MEDIA_URL }}alpaca-blanket.jpg" alt="image of alpaca wool blankets">
                <div class="card-img-overlay my-5 text-center">
                   <a href="{% url 'products' %}?category=blankets"
