--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 h2 {
-	font-size: 20px;
+	font-size: 16px;
 	letter-spacing: 2px;
 	text-transform: uppercase;
 }
@@ -535,6 +535,9 @@ a.btn.btn-blog:hover {
 @media only screen and (min-width: 768px) {
 	h1 {
 		font-size: 48px;
+	}
+	h2 {
+		font-size: 20px;
 	}
 	.index-image .image-button {
 		min-width: 160px;
